Wed Jun 12 11:49:33 2002  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/AC_Client_Logging_Daemon.cpp: Changed to
          match book.

        * examples/C++NPv2/Reactor_Logging_Server_Adapter.cpp (init):
          Use ACE_Auto_Array_Ptr to be cleaner about allocated char ptr
          array. Coincides with book change.

Tue Jun 11 10:23:03 2002  Stephen Torri	<storri@cs.wustl.edu>

	* ace/String_Base.h: Updated comments/documentation on the String_Base
	  class.

	* ace/String_Base.{i,cpp}: Added brackets to if/else statements for
	  better structure/readability. Changed "(cond) ? true : false" to
	  better "if/else" structure.

Tue Jun 11 19:05:39 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/SOCK_Dgram_Mcast.h: Added a default constructor for 
	  ACE_SOCK_Dgram_Mcast.

	* tests/Config_Test.cpp (test): Added tests for the following capability.
	  Thanks to Eugene Alterman <eugalt@myrealbox.com> for
 	  contributing these tests.
	
	* ace/Configuration.{h,cpp}: Added support for a new open_simple_section()
	  method that does not allow path key separators.  Thanks to
 	  Eugene Alterman <eugalt@myrealbox.com> for contributing this
 	  patch.

Tue Jun 11 20:02:39 2002  Steve Huston  <shuston@riverace.com>

        * ace/DLL_Manager.cpp (ACE_DLL_Handle::error()): Change to a
          different form of auto_ptr initialization that Visual Age C++
          likes better.

Tue Jun 11 13:17:29 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/Cache_Map_Manager_T.h: 
	* ace/Caching_Utility_T.h: 
	* ace/Env_Value_T.h: Added #include "ace/Global_Macros.h".
	  Thanks to Ty Tenait <tytenait@yahoo.com> for reporting this.
	
	* ace/Dirent_Selector.h: Added #include "ace/ACE_export.h".
	  Thanks to Ty Tenait <tytenait@yahoo.com> for reporting this.

Tue Jun 11 09:42:06 2002  Ossama Othman  <ossama@uci.edu>

	* ace/SOCK_Dgram_Mcast_T.cpp (make_multicast_ifaddr):

	  Use ACE_HTONL instead of htonl().  The latter causes the